# learn-playwright

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: try_playwright.py
solutions/1/: README.md  one.py
solutions/one/: README.md
